--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,10 @@
 remote_theme: pmarsceill/just-the-docs
 
+aux_links:
+  "Textbook":
+    - "https://lingualatina.github.io/textbook/"
+
+
+
+
 footer_content: "Latin 101, Fall 2020. All material on this web site is available under the Creative Commons Attribution Share-Alike license <a href=\"https://creativecommons.org/licenses/by-sa/4.0/\">CC BY-SA 4.0 <img height=\"15\" width=\"80\" src=\"https://mirrors.creativecommons.org/presskit/buttons/80x15/png/by-sa.png\" /></a> "
