--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pmarsceill/just-the-docs
 
 aux_links:
-  "Textbook":
+  "L3 textbook":
     - "https://lingualatina.github.io/textbook/"
 
 
