--- a/F20/calendar1.yaml
+++ b/F20/calendar1.yaml
@@ -12,3 +12,4 @@ totalWeeks : 14
 
 fixedDates:
   - 2020-09-30 == No class on Wednesday
+  - 2020-10-09 == All unit 1 requirements due Friday (11:59 pm Eastern)
