Set up working calendar system.

--- a/offline/_config.yml
+++ b/offline/_config.yml
@@ -4,6 +4,8 @@ title: "Latin 101-02,  F'22"
 
 
 aux_links:
+  "Daily schedule": 
+    - "https://neelsmith.github.io/latin101/schedule/"
   "L3 textbook":
     - "https://lingualatina.github.io/textbook/"
 
