Update links to portfolio assignments

--- a/F22/calendar1.toml
+++ b/F22/calendar1.toml
@@ -23,9 +23,9 @@ fixedDates = [
   
 
 
-  ["2022-09-30",  "📜 Mastering unit 1 forms due."],
-  ["2022-10-03",  "📜 Reading assignment 1 due."],
-  ["2022-10-07",  "📜 Composition 1 due."],
+  ["2022-09-30",  "📜 Mastering [unit 1 forms](../assignments/unit1/mastery/) due."],
+  ["2022-10-03",  "📜 [Reading](../assignments/unit1/reading/)  assignment 1 due."],
+  ["2022-10-07",  "📜 [Composition](../assignments/unit1/composition/)  1 due."],
 
 
   ["2022-10-28",  "📜 Mastering unit 2 forms due."],
