--- a/F22/calendar1.toml
+++ b/F22/calendar1.toml
@@ -28,9 +28,9 @@ fixedDates = [
   ["2022-10-07",  "📜 [Composition](../assignments/unit1/composition/)  1 due."],
 
 
-  ["2022-10-28",  "📜 Mastering unit 2 forms due."],
-  ["2022-11-02",  "📜 Reading assignment 2 due."],
-  ["2022-11-04",  "📜 Composition 2 due."],
+  ["2022-11-04",  "📜 Mastering [unit 2 forms](../assignments/unit2/composition/) due."],
+  ["2022-11-07",  "📜 [Reading](../assignments/unit2/reading/) assignment 2 due."],
+  ["2022-11-09",  "📜 [Composition](../assignments/unit2/composition/) 2 due."],
 
 
   ["2022-11-18",  "📜 Mastering unit 3 forms due."],
